[package]
name = "kvrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "libkvrs"
path = "src/lib.rs"

[[bin]]
name = "kvrs"
path = "src/kvrs.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
indexmap = { version = "2.1.0", features = ["serde"] }
byteorder = "1.5.0"
lazy_static = "1.4.0"
postcard = { version = "1.0.8", features = ["alloc"] }
serde = "1.0.190"

[dev-dependencies]
rand = "0.8.5"
